--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="calender.css">
-  <script src="calender.js" type="text/javascript"></script>
+  <link rel="stylesheet" type="text/css" href="calendar.css">
+  <script src="calendar.js" type="text/javascript"></script>
   <title>TRY</title>
 </head>
 
@@ -23,22 +23,32 @@
   3.save tag into tagArr, content into contentsArr
         
   */
-  calender_create(2, 2017);
-  add_event(1, "tag1", "hello1111111111");
-  add_event(1, "tag2", "hello22222222");
-  add_event(3, "tag3", "hello3333333333");
-  add_event(14, "tag4", "hello444");
-  add_event(20, "tag5", "hello5555");
-  add_event(5, "tag6", "hello6");
-  add_event(6, "tag7", "hello7");
-  add_event(7, "tag8", "hello8");
-  add_event(8, "tag9", "hello9");
-  add_event(9, "tag10", "hello10");
-  add_event(2, "tag11", "hello11");
-  add_event(20, "tag12", "hello12");
-  add_event(28, "tag13", "hello13");
-  add_event(28, "tag14", "hello14");
-  add_event(4, "tag15", "hello15");
+  calendar_create(2, 2017);
+  add_event(2,2017,1, "tag1", "hello1111111111");
+  add_event(2,2017,1, "tag2", "hello22222222");
+  add_event(2,2017,3, "tag3", "hello3333333333");
+  add_event(2,2017,14, "tag4", "hello444");
+  add_event(2,2017,20, "tag5", "hello5555");
+  add_event(2,2017,5, "tag6", "hello6");
+  add_event(2,2017,6, "tag7", "hello7");
+  add_event(2,2017,7, "tag8", "hello8");
+  add_event(2,2017,8, "tag9", "hello9");
+  add_event(2,2017,9, "tag10", "hello10");
+  add_event(2,2017,2, "tag11", "hello11");
+  add_event(2,2017,20, "tag12", "hello12");
+  add_event(2,2017,28, "tag13", "hello13");
+  add_event(2,2017,28, "tag14", "hello14");
+  add_event(2,2017,4, "tag15", "hello15");
+
+  calendar_create(3, 2019);
+  add_event(3,2019,1, "tag1", "zzzzzzzz1111111111");
+  add_event(3,2019,1, "tag2", "zzzzz22222222");
+  add_event(3,2019,3, "tag3", "zzzzz3333333333");
+  add_event(3,2019,14, "tag4", "zzzzz444");
+  add_event(3,2019,20, "tag5", "zzzzz5555");
+
+  calendar_create(4, 2019);
+  add_event(4,2019,3,"sleep","sleep with my GF~~<3")
 </script>
 
 </html>
