--- a/index.html
+++ b/index.html
@@ -15,19 +15,7 @@
 <body>
 </body>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
-<script src="calendar.js" type="text/javascript"></script>
+<script src="index.js" type="text/javascript"></script>
 <script src="calendar_test.js" type="text/javascript"></script>
-<script type="text/javascript">
-  // calender_create(c_month,c_year)
-  // addCalendarEvent(c_year,c_month,c_date,tag,time,content)
-  /*
-  1.check if requested month exists,
-    if not: call calender_create,
-    if exist: execute addCalendarEvent(c_date, tag, time, content)
-  2.check if requested date exits
-    if no : false
-  3.save tag into tagArr, content into contentsArr
-  */
-</script>
 
 </html>
